--- a/src/SilkierQuartz/Views/Layout.hbs
+++ b/src/SilkierQuartz/Views/Layout.hbs
@@ -41,25 +41,26 @@
                 </a>
             </div>
 
-            {{MenuItemActionLink text='Overview' controller='Scheduler'}}
+            {{MenuItemActionLink title='Overview' controller='Scheduler'}}
             {{MenuItemActionLink 'Jobs'}}
             {{MenuItemActionLink 'Triggers'}}
             {{MenuItemActionLink 'Executions'}}
             {{MenuItemActionLink 'History'}}
             {{MenuItemActionLink 'Calendars'}}
+            {{MenuItemActionLink title='Logout' controller='Authenticate/Logout'}}
 
             <!--
-            <div class="right menu">
-                <div class="ui dropdown item">
-                    <i class="user circle large icon"></i>
-                    domain\user
-                    <i class="dropdown icon"></i>
-                    <div class="menu">
-                        <a class="item center" href="#">Logout</a>
-                    </div>
-                </div>
+    <div class="right menu">
+        <div class="ui dropdown item">
+            <i class="user circle large icon"></i>
+            domain\user
+            <i class="dropdown icon"></i>
+            <div class="menu">
+                <a class="item center" href="#">Logout</a>
             </div>
-            -->
+        </div>
+    </div>
+    -->
         </div>
     </div>
 
