Base authorization seperation support

--- a/sample/Pages/Shared/_Layout.cshtml
+++ b/sample/Pages/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark"   href= "/SilkierQuartz">SilkierQuartz</a>
+                            <a class="nav-link text-dark"   href= "/SilkierQuartz/Authenticate/Login">SilkierQuartz</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
